Refactor django-dev service configuration
Removed unnecessary labels and updated port configuration.

--- a/ParentInfoSystem/Development/service.yaml
+++ b/ParentInfoSystem/Development/service.yaml
@@ -1,16 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: django-dev
   name: django-dev-service
-  namespace: vbs-dev
 spec:
-  ports:
-  - name: HTTP
-    port: 8000
-    protocol: TCP
-    targetPort: 8000
+  type: ClusterIP
+  
   selector:
     app: django-dev
-  type: ClusterIP
+
+  ports:
+    - name: http-port-mapping
+      port: 80 
+      targetPort: 8000 
+      protocol: TCP
